crates/compiler/test_syntax/tests/snapshots/pass/full_app_header.header.roc
app "quicksort"
    packages { pf: "./platform" }
    provides [ quicksort ] to pf
