crates/compiler/test_syntax/tests/snapshots/fail/provides_bare_symbol.header.roc
app "provides-bare-symbol"
    packages { pf: "platform/main.roc" }
    imports [pf.Task Base64]
    provides main to pf
